# AutoSynergism

./: .gitignore  LICENSE  README.md  pyproject.toml
autosynergism/: __main__.py  action.py  geometry.json  geometry.py  main.py  ocr.py
